--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Dracula.png" alt="" class="card-value">
+                <img src="Assets/Images/lion.jpg" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -56,11 +52,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Dracula.png" alt="" class="card-value">
+                <img src="Assets/Images/lion.jpg" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -73,11 +65,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Skull.png" alt="" class="card-value">
+                <img src="Assets/Images/Lion2.png" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -90,11 +78,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Skull.png" alt="" class="card-value">
+                <img src="Assets/Images/Lion2.png" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -107,11 +91,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Bat.png" alt="" class="card-value">
+                <img src="Assets/Images/monkey.jpg" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -124,11 +104,7 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
-                <img src="Assets/Images/Bat.png" alt="" class="card-value">
+                <img src="Assets/Images/monkey.jpg" alt="" class="card-value lion">
 
             </div>
         </div>
@@ -141,10 +117,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Eye.png" alt="" class="card-value">
 
             </div>
@@ -158,10 +130,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Eye.png" alt="" class="card-value">
 
             </div>
@@ -175,10 +143,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Bones.png" alt="" class="card-value">
 
             </div>
@@ -192,10 +156,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Bones.png" alt="" class="card-value">
 
             </div>
@@ -209,10 +169,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Ghost.png" alt="" class="card-value">
 
             </div>
@@ -226,10 +182,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Ghost.png" alt="" class="card-value">
 
             </div>
@@ -243,10 +195,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Cauldron.png" alt="" class="card-value">
 
             </div>
@@ -260,10 +208,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Cauldron.png" alt="" class="card-value">
 
             </div>
@@ -277,10 +221,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Pumpkin.png" alt="" class="card-value">
 
             </div>
@@ -294,10 +234,6 @@
                 <img src="Assets/Images/Spider.png" alt="" class="spider">
             </div>
             <div class="card-front card-face">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-top-right">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-left">
-                <img src="Assets/Images/CobwebGrey.png" alt="" class="cob-web cob-web-bottom-right">
                 <img src="Assets/Images/Pumpkin.png" alt="" class="card-value">
 
             </div>
