--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <!-- pop up -->
     <div class="modal" id="modal">
         <div class="modal-header">
-            <div class="title">What is this animal called?</div>
+            <div class="title" id="title-id">What is this animal called?</div>
         </div>
         <form action="/" method="GET" id="answer" name="quiz">
         <div class="modal-body">
-            <input type="text" id="modal-input" name="question" autocomplete="off">
+            <input type="text" id="modal-input" name="question" autocomplete="off" spellcheck="false">
             <input type="submit" id="modal-submit" value="Submit">
         </div>
         </form>
