--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
-    <title>Mix-Or-Match</title>
+    <title>Mix-Or-ratch</title>
 </head>
 <body>
     <h1 class="page-title">Mix-Or-Match</h1>
