--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" async></script>
-    <title>Mix-Or-batch</title>
+    <title>Mix-Or-match</title>
 </head>
 <body>
-    <h1 class="page-title">Mix-Or-Match</h1>
+    <h1 class="page-title">Mix-Or-catch</h1>
     <div class="overlay-text visible">
         Click to Start
     </div>
