--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mix-Or-match</title>
 </head>
 <body>
-    <h1 class="page-title">Mix-Or-supergay</h1>
+    <h1 class="page-title">Mix-Or-lesbien</h1>
     <div class="overlay-text visible">
         Click to Start
     </div>
