--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" async></script>
-    <title>Mix-Or-Match</title>
+    <script src="" async></script>
+    <title>Mix-Or-Batch</title>
 </head>
 <body>
-    <h1 class="page-title">Mix-Or-catch</h1>
+    <h1 class="page-title">Mix-Or-Match</h1>
     <div class="overlay-text visible">
         Click to Start
     </div>
