--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mix-Or-Match</title>
 </head>
 <body>
-    <h1 class="page-title">Max-Or-Batch</h1>
+    <h1 class="page-title">Max-Or-Match</h1>
     <div class="overlay-text visible">
         Click to Start
     </div>
@@ -36,7 +36,7 @@
     </div>
     <div id="overlay-popup"></div>
     <!--  -->
-    <div class="game-container">
+    <div class="game-container" id="gameContainer">
         <div class="game-info-container">
             <div class="game-info">
                 Time <span id="time-remaining">600</span>
