--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mix-Or-Match</title>
 </head>
 <body>
-    <h1 class="page-title">kokot-Or-Match</h1>
+    <h1 class="page-title">gublo-Or-Match</h1>
     <div class="overlay-text visible">
         Click to Start
     </div>
